welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: ')' expected but ':' found.
while (estSurMessage():Boolean:) {
                              ^BDRBuggle:76: error: illegal start of declaration
		gauche();gauche();avance();
                ^BDRBuggle:76: error: illegal start of declaration
		gauche();gauche();avance();
                         ^BDRBuggle:76: error: illegal start of declaration
		gauche();gauche();avance();
                                  ^BDRBuggle:78: error: ')' expected but 'if' found.
	if (litMessage(): String :=A) {
        ^BDRBuggle:81: error: ';' expected but 'if' found.
	if (litMessage(): String :=B) {
        ^BDRBuggle:98: error: Unmatched closing brace '}' ignored here
	}
        ^